--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="KB727.COM">
-    <meta name="keywords" content="KB727,Buffalo,Shanghai,Seattle">
+    <meta name="description" content="KB727 is a global certificate program that advocates for social responsibility in tutoring.">
+    <meta name="keywords" content="ESL,ESOL,TESOL,TEFL,lessons,tutoring,tutor,classes,Tutor training programs,English tutor near me,Free online tutor training courses,Tutor training certificate,Preply become a tutor,tutor翻译,tutor是什么,私教,课程,课表,家教,辅导,补习,一对一,培训,小班,免费课程,免费辅导,tutoring classes for adults,tutoring classes online for free,tutoring classes near me,TEAS tutoring classes near me,free online tutoring classes math,ASVAB tutoring classes near me,tutoring classes prices,high school tutoring programs,Career Tutoring,Higher Education Tutoring,Test Prep,Tutoring for K-12,Expert Tutors,Subjects">
     <meta name="author" content="KB727">
     <meta name="apple-mobile-web-app-title" content="KB727">
     <meta name="application-name" content="KB727">
@@ -19,9 +19,9 @@
     <link href="css/animations.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a74ffbaf46.js" crossorigin="anonymous"></script>
+    <!-- Google Fonts -->
+    <link href="fonts/open-sans.css" rel="stylesheet">
+    <link href="font-awesome/css/all.min.css" rel="stylesheet">
 
     <!-- Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v20230203=v20240519">
