--- a/default.html
+++ b/default.html
@@ -19,9 +19,9 @@
     <link href="css/animations.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a74ffbaf46.js" crossorigin="anonymous"></script>
+    <!-- Google Fonts -->
+    <link href="fonts/open-sans.css" rel="stylesheet">
+    <link href="font-awesome/css/all.min.css" rel="stylesheet">
 
     <!-- Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v20230203=v20240519">
@@ -41,12 +41,12 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-index btn-lg pull-right toggle" onClick="ga('send', 'event', 'Navbar', 'Toggle', 'Navbar toggle');"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand"><a href="#top"><b>KB727.COM</b></a></li>
-            <li><a href="#about" onClick="ga('send', '_trackEvent', 'Navbar', 'About');">关于我们</a></li>
-            <li><a href="attachments\Training-Consulting.txt" onClick="ga('send', '_trackEvent', 'Navbar', 'services');">认证项目</a></li>
-            <li><a href="#portfolio" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">合作伙伴</a></li>
-            <li><a href="attachments\Rewards.pdf" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">奖励物品</a></li>
-            <li><a href="index.html" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">英文版本</a></li>
-            <li><a href="mailto:Min.Fang@KB727.COM" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
+            <li><a href="#about" onClick="ga('send', 'event', 'Navbar', 'Click', 'About');">关于我们</a></li>
+            <li><a href="attachments\Training-Consulting.txt" onClick="ga('send', 'event', 'Navbar', 'Click', 'Services');">认证项目</a></li>
+            <li><a href="#portfolio" onClick="ga('send', 'event', 'Navbar', 'Click', 'Portfolio');">合作伙伴</a></li>
+            <li><a href="attachments\Rewards.pdf" onClick="ga('send', 'event', 'Navbar', 'Click', 'Rewards');">奖励物品</a></li>
+            <li><a href="index.html" onClick="ga('send', 'event', 'Navbar', 'Click', 'English');">英文版本</a></li>
+            <li><a href="mailto:Min.Fang@KB727.COM" onClick="ga('send', 'event', 'Navbar', 'Click', 'Contact');">联系我们</a></li>
             <hr>
             <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE">KB727 is a global certificate program that advocates for social responsibility in tutoring. As of December 2024, we have booked more than 200 interviews in Shanghai, Seattle, and Buffalo, and have awarded 17 certificates.</p>
         </ul>
@@ -61,12 +61,12 @@
             <h2><b>提供奖励和支持</b></h2>
             </div><br><br><br><br>
             <ul class="list-inline spaced">
-                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
-                <li><a href="attachments/Training-Consulting.txt" title="认证项目" alt="认证项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
-                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
-                <li><a href="attachments/Rewards.pdf" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
-                <li><a href="index.html" target="_blank"  title="英文版本" alt="英文版本" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
-                <li><a href="mailto:Min.Fang@KB727.COM" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
+                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', 'event', 'Navbar', 'Click', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
+                <li><a href="attachments/Training-Consulting.txt" title="认证项目" alt="认证项目" onClick="ga('send', 'event', 'Navbar', 'Click', 'Services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
+                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', 'event', 'Navbar', 'Click', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
+                <li><a href="attachments/Rewards.pdf" title="奖励物品" alt="奖励物品" onClick="ga('send', 'event', 'Navbar', 'Click', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
+                <li><a href="index.html" target="_blank"  title="英文版本" alt="英文版本" onClick="ga('send', 'event', 'Links', 'Click', 'English');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
+                <li><a href="mailto:Min.Fang@KB727.COM" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', 'event', 'Links', 'Click', 'Email');"><i class="fa-regular fa-envelope fa-3x"></i></a></li>
             </ul>
         </div>
     </div>
@@ -77,7 +77,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-md-offset-0 text-center">
-                   <div class="pixelSeven toSlideRight" /></div>
+                   <div class="pixelSeven toSlideRight"></div>
                 </div>
             <div class="col-md-12 text-center">
                 <h2 style="text-align: left"><b>简介</b></h2>
@@ -175,20 +175,20 @@
                 <div class="col-md-6 col-md-offset-3 text-center">
                 <h2><b>部分合作机构的业务链接</b></h2>
                 <ul class="list-inline spaced">
-                   <li><a href="attachments/Overseas-Projects.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">跨境合作</a></li>
-                   <li><a href="attachments/Assets.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">资产交易</a></li>
+                   <li><a href="attachments/Overseas-Projects.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', 'event', 'Links', 'Click', 'Overseas');">跨境合作</a></li>
+                   <li><a href="attachments/Assets.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', 'event', 'Links', 'Click', 'Assets');">资产交易</a></li>
                 </ul>
                 <hr>
             <ul class="list-inline spaced">
-                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
-                <li><a href="attachments/Training-Consulting.txt" title="认证项目" alt="认证项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
-                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
-                <li><a href="attachments/Rewards.pdf" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
-                <li><a href="index.html" target="_blank"  title="英文版本" alt="英文版本" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
+                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', 'event', 'Navbar', 'Click', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
+                <li><a href="attachments/Training-Consulting.txt" title="认证项目" alt="认证项目" onClick="ga('send', 'event', 'Navbar', 'Click', 'Services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
+                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', 'event', 'Navbar', 'Click', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
+                <li><a href="attachments/Rewards.pdf" title="奖励物品" alt="奖励物品" onClick="ga('send', 'event', 'Navbar', 'Click', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
+                <li><a href="index.html" target="_blank"  title="英文版本" alt="英文版本" onClick="ga('send', 'event', 'Links', 'Click', 'English');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
             </ul>
                     <ul class="list-unstyled size-m spaced">
-                        <li><i class="fa fa-map-marker"></i> Shanghai ● Seattle ● Buffalo</li>
-                        <li><i class="fa fa-envelope-o"></i> <a href="mailto:Min.Fang@KB727.COM" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email bottom');">Min.Fang@KB727.COM</a>
+                        <li><i class="fa-solid fa-location-dot"></i> Shanghai ● Seattle ● Buffalo</li>
+                        <li><i class="fa-regular fa-envelope"></i> <a href="mailto:Min.Fang@KB727.COM" target="_blank" onClick="ga('send', 'event', 'Links', 'Click', 'Email');">Min.Fang@KB727.COM</a>
                         </li>
                     </ul>
                 <div class="top-scroll">
