--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <link href="css/animations.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a74ffbaf46.js" crossorigin="anonymous"></script>
+    <!-- Google Fonts -->
+    <link href="fonts/open-sans.css" rel="stylesheet">
+    <link href="font-awesome/css/all.min.css" rel="stylesheet">
 
     <!-- Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v20230203=v20240519">
@@ -62,12 +62,12 @@
             </div><br><br><br><br>
             <ul class="list-inline spaced">
                 <li><a href="#what" title="WHAT'S KB727" alt="WHAT'S KB727" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
-                <li><a href="#why" title="WHY KB727" alt="WHY KB727" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-expand fa-3x"></i></a></li>
-                <li><a href="#how" title="HOW WE WORK" alt="HOW WE WORK" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-pen-to-square fa-3x"></i></a></li>
-                <li><a href="#want" title="WANT TO GET INVOLVED?" alt="WANT TO GET INVOLVED?" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
+                <li><a href="#why" title="WHY KB727" alt="WHY KB727" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
+                <li><a href="#how" title="HOW WE WORK" alt="HOW WE WORK" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
+                <li><a href="#want" title="WANT TO GET INVOLVED?" alt="WANT TO GET INVOLVED?" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
                 <li><a href="default.html" target="_blank"  title="Chinese Website" alt="Chinese Website" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
-                <li><a href="mailto:Min.Fang@KB727.COM" title="Send E-mail" alt="Send E-mail" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
-            </ul>
+                <li><a href="mailto:Min.Fang@KB727.COM" title="Send E-mail" alt="Send E-mail" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa-regular fa-envelope fa-3x"></i></a></li>
+             </ul>
         </div>
     </div>
     <!-- /Full Page Image Header Area -->
@@ -139,14 +139,14 @@
                 <hr>
             <ul class="list-inline spaced">
                 <li><a href="#what" title="WHAT'S KB727" alt="WHAT'S KB727" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
-                <li><a href="#why" title="WHY KB727" alt="WHY KB727" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-expand fa-3x"></i></a></li>
-                <li><a href="#how" title="HOW WE WORK" alt="HOW WE WORK" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-pen-to-square fa-3x"></i></a></li>
-                <li><a href="#want" title="WANT TO GET INVOLVED?" alt="WANT TO GET INVOLVED?" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
+                <li><a href="#why" title="WHY KB727" alt="WHY KB727" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
+                <li><a href="#how" title="HOW WE WORK" alt="HOW WE WORK" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
+                <li><a href="#want" title="WANT TO GET INVOLVED?" alt="WANT TO GET INVOLVED?" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
                 <li><a href="default.html" target="_blank"  title="Chinese Website" alt="Chinese Website" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
             </ul>
                     <ul class="list-unstyled size-m spaced">
-                        <li><i class="fa fa-map-marker"></i> Shanghai ● Seattle ● Buffalo</li>
-                        <li><i class="fa fa-envelope-o"></i> <a href="mailto:Min.Fang@KB727.COM" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email bottom');">Min.Fang@KB727.COM</a>
+                        <li><i class="fa-solid fa-location-dot"></i> Shanghai ● Seattle ● Buffalo</li>
+                        <li><i class="fa-regular fa-envelope"></i> <a href="mailto:Min.Fang@KB727.COM" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email bottom');">Min.Fang@KB727.COM</a>
                     </ul>
                 <div class="top-scroll">
                 <a href="#top" title="Back to top" alt="Back to top"><i class="fa fa-angle-double-up scroll fa-4x"></i></a>
